修改自动播放

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="p3-first"></div>
         <div class="p3-blessing" id="p3-blessing"></div>
     </div>
-    <audio id="bgmusic" loop="true">
+    <audio id="bgmusic" autoplay="true" loop="true">
         <source src="audio/springfestival28.mp3" type="audio/mpeg"></source>
     </audio>
 </body>
