修改自动播放

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="bg"></div>
         <div class="p1-lantern" id="p1-lantern">点击灯笼<br>开启好运2018</div>
         <div class="p1-imooc"></div>
-        <div class="p1-words">2018新年特献-福狗贺春</div>
+        <div class="p1-words">2018新年特献-福狗贺春 By:xiaoxin</div>
     </div>
     <div class="page" id="page2">
         <div class="bg p2-bg-loading"></div>
