更新第二页文字

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <div class="page" id="page2">
         <div class="bg p2-bg-loading"></div>
         <div class="bg"></div>
+        <div class="p2-words">
+            只要坚持<br><br>梦想总是可以实现的
+        </div>
+        <div class="p2-words2">
+            天上不会掉馅饼<br><br>努力奋斗才能梦想成真
+        </div>
         <div class="p2-circle"></div>
         <div class="p2-2018"></div>
     </div>
